update forgot_password, login, and register pages

--- a/views/sign/forgot_password.erb
+++ b/views/sign/forgot_password.erb
@@ -12,9 +12,16 @@
                 <% end %>
             <% end %>
             <form action="/forgot_password" method="post">
-                <div class="form-floating mb-3">
-                    <input class="form-control" id="email" type="email" name="email" placeholder="Enter Your Email" value="<%= params[:email]%>" />
-                    <label for="email">Email address</label>
+                <div class="input-group mb-3">
+                    <div class="input-group">
+                        <span class="input-group-text">
+                            <i class="fa-solid fa-envelope" ></i>
+                        </span>
+                        <div class="form-floating">
+                            <input class="form-control" id="email" type="email" name="email" placeholder="Enter Your Email" value="<%= params[:email]%>" />
+                            <label for="email">Email address</label>
+                        </div>
+                    </div>
                 </div>
                 <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                     <a class="small" href="/login">Return to login</a>
