--- a/views/layouts/user/template.erb
+++ b/views/layouts/user/template.erb
@@ -44,6 +44,9 @@
             <li class="nav-item">
               <a class="nav-link text-white" href="/register">Register</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link text-white" href="/logout">Log Out</a>
+            </li>
           </ul>
         </div>
       </div>
