--- a/views/admin/edit_profile.erb
+++ b/views/admin/edit_profile.erb
@@ -1,12 +1,12 @@
 <div class="container-fluid px-4">
     <h1 class="mt-4">Dashboard</h1>
     <ol class="breadcrumb mb-4">
-        <li class="breadcrumb-item active">View User Profile</li>
+        <li class="breadcrumb-item active">Edit Profile</li>
     </ol>
     <div class="card mb-4">
         <div class="card-header">
             <i class="fas fa-user me-1"></i>
-            View <%= @user['name']%>
+            Edit <%= @user['name']%>
         </div>
         <div class="card-body">
             <div class="mb-3 row">
