--- a/views/admin/user_dashboard/edit.erb
+++ b/views/admin/user_dashboard/edit.erb
@@ -6,7 +6,7 @@
     <div class="card mb-4">
         <div class="card-header">
             <i class="fas fa-user me-1"></i>
-            Edit A User
+            Edit <%= @user['name']%> Profile
         </div>
         <div class="card-body">
             <% if session[:success] %>
@@ -99,7 +99,7 @@
                     <% end %>
                 </div>
                 <button type="submit" class="btn btn-primary float-end">Submit</button>
-                <a class="btn btn-secondary float-start" href="/admin">Back</a>
+                <a class="btn btn-outline-secondary float-start" href="/admin"><i class="fa-solid fa-arrow-left"></i> Back</a>
             </form>
         </div>
     </div>
