--- a/views/admin/view.erb
+++ b/views/admin/view.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid px-4">
     <h1 class="mt-4">Dashboard</h1>
     <ol class="breadcrumb mb-4">
-        <li class="breadcrumb-item active">View User Profile</li>
+        <li class="breadcrumb-item active">My Profile</li>
     </ol>
     <div class="card mb-4">
         <div class="card-header">
