--- a/views/admin/edit_profile.erb
+++ b/views/admin/edit_profile.erb
@@ -1,7 +1,7 @@
 <div class="container-fluid px-4">
     <h1 class="mt-4">Dashboard</h1>
     <ol class="breadcrumb mb-4">
-        <li class="breadcrumb-item active">Edit Profile</li>
+        <li class="breadcrumb-item active">Edit Admin Profile</li>
     </ol>
     <div class="card mb-4">
         <div class="card-header">
@@ -12,37 +12,37 @@
             <div class="mb-3 row">
                 <label for="name" class="col-sm-2 col-form-label">Name</label>
                 <div class="col-sm-10">
-                    <input type="text" readonly class="form-control-plaintext" id="name" value="<%= @profile['name'] %>">
+                    <input type="text" readonly class="form-control" id="name" value="<%= @profile['name'] %>">
                 </div>
             </div>
             <div class="mb-3 row">
                 <label for="username" class="col-sm-2 col-form-label">Username</label>
                 <div class="col-sm-10">
-                    <input type="text" readonly class="form-control-plaintext" id="username" value="<%= @profile['username'] %>">
+                    <input type="text" readonly class="form-control" id="username" value="<%= @profile['username'] %>">
                 </div>
             </div>
             <div class="mb-3 row">
                 <label for="email" class="col-sm-2 col-form-label">Email</label>
                 <div class="col-sm-10">
-                    <input type="text" readonly class="form-control-plaintext" id="email" value="<%= @profile['email'] %>">
+                    <input type="text" readonly class="form-control" id="email" value="<%= @profile['email'] %>">
                 </div>
             </div>
             <div class="mb-3 row">
                 <label for="birthdate" class="col-sm-2 col-form-label">Birthdate</label>
                 <div class="col-sm-10">
-                    <input type="text" readonly class="form-control-plaintext" id="birthdate" value="<%= @profile['birthdate'] %>">
+                    <input type="text" readonly class="form-control" id="birthdate" value="<%= @profile['birthdate'] %>">
                 </div>
             </div>
             <div class="mb-3 row">
                 <label for="address" class="col-sm-2 col-form-label">Address</label>
                 <div class="col-sm-10">
-                    <input type="text" readonly class="form-control-plaintext" id="address" value="<%= @profile['address'] %>">
+                    <input type="text" readonly class="form-control" id="address" value="<%= @profile['address'] %>">
                 </div>
             </div>
             <div class="mb-3 row">
                 <label for="phone" class="col-sm-2 col-form-label">Phone</label>
                 <div class="col-sm-10">
-                    <input type="text" readonly class="form-control-plaintext" id="phone" value="<%= @profile['phone'] %>">
+                    <input type="text" readonly class="form-control" id="phone" value="<%= @profile['phone'] %>">
                 </div>
             </div>
             <div class="mb-3 row">
@@ -56,7 +56,7 @@
             <div class="mb-3 row">
                 <label for="access" class="col-sm-2 col-form-label">Access</label>
                 <div class="col-sm-10">
-                    <input type="text" readonly class="form-control-plaintext" id="access" value="<%= @profile['access'] %>">
+                    <input type="text" readonly class="form-control" id="access" value="<%= @profile['access'] %>">
                 </div>
             </div>
             <!-- Submit Button -->
