--- a/views/admin/edit_profile.erb
+++ b/views/admin/edit_profile.erb
@@ -9,58 +9,66 @@
             Edit <%= @profile['name']%>
         </div>
         <div class="card-body">
-            <div class="mb-3 row">
-                <label for="name" class="col-sm-2 col-form-label">Name</label>
-                <div class="col-sm-10">
-                    <input type="text" readonly class="form-control" id="name" value="<%= @profile['name'] %>">
+            <form action="/profiles/<%= @profile['user_id'] %>">
+                <div class="mb-3 row">
+                    <label for="name" class="col-sm-2 col-form-label">Name</label>
+                    <div class="col-sm-10">
+                        <input type="text" readonly class="form-control" id="name" value="<%= @profile['name'] %>">
+                    </div>
                 </div>
-            </div>
-            <div class="mb-3 row">
-                <label for="username" class="col-sm-2 col-form-label">Username</label>
-                <div class="col-sm-10">
-                    <input type="text" readonly class="form-control" id="username" value="<%= @profile['username'] %>">
+                <div class="mb-3 row">
+                    <label for="username" class="col-sm-2 col-form-label">Username</label>
+                    <div class="col-sm-10">
+                        <input type="text" readonly class="form-control" id="username" value="<%= @profile['username'] %>">
+                    </div>
                 </div>
-            </div>
-            <div class="mb-3 row">
-                <label for="email" class="col-sm-2 col-form-label">Email</label>
-                <div class="col-sm-10">
-                    <input type="text" readonly class="form-control" id="email" value="<%= @profile['email'] %>">
+                <div class="mb-3 row">
+                    <label for="email" class="col-sm-2 col-form-label">Email</label>
+                    <div class="col-sm-10">
+                        <input type="text" readonly class="form-control" id="email" value="<%= @profile['email'] %>">
+                    </div>
                 </div>
-            </div>
-            <div class="mb-3 row">
-                <label for="birthdate" class="col-sm-2 col-form-label">Birthdate</label>
-                <div class="col-sm-10">
-                    <input type="text" readonly class="form-control" id="birthdate" value="<%= @profile['birthdate'] %>">
+                <div class="mb-3 row">
+                    <label for="birthdate" class="col-sm-2 col-form-label">Birthdate</label>
+                    <div class="col-sm-10">
+                        <input type="date" class="form-control" id="birthdate" value="<%= @profile['birthdate'] %>">
+                    </div>
                 </div>
-            </div>
-            <div class="mb-3 row">
-                <label for="address" class="col-sm-2 col-form-label">Address</label>
-                <div class="col-sm-10">
-                    <input type="text" readonly class="form-control" id="address" value="<%= @profile['address'] %>">
+                <div class="mb-3 row">
+                    <label for="address" class="col-sm-2 col-form-label">Address</label>
+                    <div class="col-sm-10">
+                        <textarea type="text" readonly class="form-control" id="address" value="<%= @profile['address'] %>"><%= @profile['address'] %></textarea>
+                    </div>
                 </div>
-            </div>
-            <div class="mb-3 row">
-                <label for="phone" class="col-sm-2 col-form-label">Phone</label>
-                <div class="col-sm-10">
-                    <input type="text" readonly class="form-control" id="phone" value="<%= @profile['phone'] %>">
+                <div class="mb-3 row">
+                    <label for="phone" class="col-sm-2 col-form-label">Phone</label>
+                    <div class="col-sm-10">
+                        <input type="text" readonly class="form-control" id="phone" value="<%= @profile['phone'] %>">
+                    </div>
                 </div>
-            </div>
-            <div class="mb-3 row">
-                <label for="access" class="col-sm-2 col-form-label" for="photo">Photo</label>
-                <div class="col-sm-10">
-                    <% if @profile['photo'] %>
-                        <img src="/uploads/users/<%= @profile['photo'] %>" style="max-width: 200px">
-                    <% end %>
+                <div class="mb-3 row">
+                    <label for="access" class="col-sm-2 col-form-label" for="photo">Photo</label>
+                    <div class="col-sm-10">
+                        <% if @profile['photo'] %>
+                            <img src="/uploads/users/<%= @profile['photo'] %>" style="max-width: 200px">
+                        <% end %>
+                    </div>
                 </div>
-            </div>
-            <div class="mb-3 row">
-                <label for="access" class="col-sm-2 col-form-label">Access</label>
-                <div class="col-sm-10">
-                    <input type="text" readonly class="form-control" id="access" value="<%= @profile['access'] %>">
+                <div class="mb-3 row">
+                    <label for="access" class="col-sm-2 col-form-label">Access</label>
+                    <div class="col-sm-10">
+                        <select class="form-select" id="access">
+                            <option selected value="<%= @profile['access'] %>"><%= @profile['access'] %></option>
+                            <option value="1">1</option>
+                            <option value="2">2</option>
+                            <option value="3">3</option>
+                        </select>
+                    </div>
                 </div>
-            </div>
-            <!-- Submit Button -->
-            <a class="btn btn-outline-primary float-end" href="#">Submit</a>
+                <!-- Submit Button -->
+                <button class="btn btn-outline-primary float-end" href="#">Submit</button>
+            </form>
+            
 
             <!-- Back Button -->
             <a class="btn btn-outline-secondary float-start" href="/admin_view_profile/<%= current_user['user_id'] %>">Back</a>
