--- a/views/admin/edit_profile.erb
+++ b/views/admin/edit_profile.erb
@@ -47,11 +47,12 @@
                     </div>
                 </div>
                 <div class="mb-3 row">
-                    <label for="access" class="col-sm-2 col-form-label" for="photo">Photo</label>
+                    <label for="photo" class="col-sm-2 col-form-label" for="photo">Photo</label>
                     <div class="col-sm-10">
                         <% if @profile['photo'] %>
-                            <img src="/uploads/users/<%= @profile['photo'] %>" style="max-width: 200px">
+                            <img src="/uploads/users/<%= @profile['photo'] %>" alt="<%= @profile['name'] %>" style="max-width: 200px">
                         <% end %>
+                        <input class="form-control" type="file" id="photo" name="photo">
                     </div>
                 </div>
                 <div class="mb-3 row">
