--- a/views/admin/edit_profile.erb
+++ b/views/admin/edit_profile.erb
@@ -9,41 +9,44 @@
             Edit <%= @profile['name']%>
         </div>
         <div class="card-body">
-            <form action="/profiles/<%= @profile['user_id'] %>">
+            <form action="/admin_edit_profile/<%= @profile['user_id'] %>" enctype="multipart/form-data">
+                <div class="mb-3">
+                    <input type="hidden" name="_method" value="post">
+                </div>
                 <div class="mb-3 row">
                     <label for="name" class="col-sm-2 col-form-label">Name</label>
                     <div class="col-sm-10">
-                        <input type="text" readonly class="form-control" id="name" value="<%= @profile['name'] %>">
+                        <input type="text" class="form-control" id="name" name="name" value="<%= @profile['name'] %>">
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="username" class="col-sm-2 col-form-label">Username</label>
                     <div class="col-sm-10">
-                        <input type="text" readonly class="form-control" id="username" value="<%= @profile['username'] %>">
+                        <input type="text" class="form-control" id="username" name="username" value="<%= @profile['username'] %>">
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="email" class="col-sm-2 col-form-label">Email</label>
                     <div class="col-sm-10">
-                        <input type="text" readonly class="form-control" id="email" value="<%= @profile['email'] %>">
+                        <input type="text" class="form-control" id="email" name="email" value="<%= @profile['email'] %>">
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="birthdate" class="col-sm-2 col-form-label">Birthdate</label>
                     <div class="col-sm-10">
-                        <input type="date" class="form-control" id="birthdate" value="<%= @profile['birthdate'] %>">
+                        <input type="date" class="form-control" id="birthdate" name="birthdate" value="<%= @profile['birthdate'] %>">
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="address" class="col-sm-2 col-form-label">Address</label>
                     <div class="col-sm-10">
-                        <textarea type="text" readonly class="form-control" id="address" value="<%= @profile['address'] %>"><%= @profile['address'] %></textarea>
+                        <textarea type="text" class="form-control" id="address" name="address" value="<%= @profile['address'] %>"><%= @profile['address'] %></textarea>
                     </div>
                 </div>
                 <div class="mb-3 row">
                     <label for="phone" class="col-sm-2 col-form-label">Phone</label>
                     <div class="col-sm-10">
-                        <input type="text" readonly class="form-control" id="phone" value="<%= @profile['phone'] %>">
+                        <input type="text" class="form-control" id="phone" name="phone" value="<%= @profile['phone'] %>">
                     </div>
                 </div>
                 <div class="mb-3 row">
@@ -58,7 +61,7 @@
                 <div class="mb-3 row">
                     <label for="access" class="col-sm-2 col-form-label">Access</label>
                     <div class="col-sm-10">
-                        <select class="form-select" id="access">
+                        <select class="form-select" id="access" name="access">
                             <option selected value="<%= @profile['access'] %>"><%= @profile['access'] %></option>
                             <option value="1">1</option>
                             <option value="2">2</option>
@@ -67,9 +70,8 @@
                     </div>
                 </div>
                 <!-- Submit Button -->
-                <button class="btn btn-outline-primary float-end" href="#">Submit</button>
+                <button type="submit" class="btn btn-outline-primary float-end">Submit</button>
             </form>
-            
 
             <!-- Back Button -->
             <a class="btn btn-outline-secondary float-start" href="/admin_view_profile/<%= current_user['user_id'] %>">Back</a>
