--- a/views/admin/edit_profile.erb
+++ b/views/admin/edit_profile.erb
@@ -28,7 +28,7 @@
                 <div class="mb-3 row">
                     <label for="email" class="col-sm-2 col-form-label">Email</label>
                     <div class="col-sm-10">
-                        <input type="text" class="form-control" id="email" name="email" value="<%= @profile['email'] %>">
+                        <input type="email" class="form-control" id="email" name="email" value="<%= @profile['email'] %>">
                     </div>
                 </div>
                 <div class="mb-3 row">
