adding logout popup

--- a/views/layouts/admin/navbar.erb
+++ b/views/layouts/admin/navbar.erb
@@ -18,10 +18,31 @@
                 <li><a class="dropdown-item" href="/admin_view_profile/<%= current_user['user_id'] %>">Settings</a></li>
                 <li><a class="dropdown-item" href="">Activity Log</a></li>
                 <li><hr class="dropdown-divider" /></li>
-                <li><a class="dropdown-item" href="/logout">Logout</a></li>
+                <li><button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#Logout">Logout</button></li>
             </ul>
         </li>
     </ul>
 </nav>
+
+<!-- Modal -->
+<div class="modal fade" id="Logout" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">Ready to Leave ?</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Select "Logout" below if you are ready to end your current session. 
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <a href="/logout" class="btn btn-primary">
+            Logout
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
 
 <div id="layoutSidenav">
