--- a/views/layouts/admin/navbar.erb
+++ b/views/layouts/admin/navbar.erb
@@ -37,7 +37,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <a href="/logout" class="btn btn-primary">
+        <a href="/logout" class="btn btn-danger">
             Logout
         </a>
       </div>
