missing remember me in email login

--- a/views/sign/login.erb
+++ b/views/sign/login.erb
@@ -30,7 +30,7 @@
                         <i class="fa-solid fa-envelope"></i>
                     </span>
                     <div class="form-floating position-relative">
-                        <input class="form-control" id="login_email" name="email" type="email" placeholder="Input Your Email" value="<%= remember_email %>" />
+                        <input class="form-control" id="login_email" name="email" type="email" placeholder="Input Your Email" value="<%= params[:email]%>" />
                         <label for="email">Email address</label>
                     </div>
                 </div>
