--- a/views/admin/edit_profile.erb
+++ b/views/admin/edit_profile.erb
@@ -67,7 +67,7 @@
                         <% if @profile['photo'] %>
                             <img src="/uploads/users/<%= @profile['photo'] %>" alt="<%= @profile['name'] %>" style="max-width: 200px">
                         <% end %>
-                        <input class="form-control" type="file" id="photo" name="photo">
+                        <input class="form-control mt-2" type="file" id="photo" name="photo">
                     </div>
                 </div>
                 <div class="mb-3 row">
