--- a/views/admin/user_dashboard/edit.erb
+++ b/views/admin/user_dashboard/edit.erb
@@ -9,13 +9,6 @@
             Edit <%= @user['name']%> Profile
         </div>
         <div class="card-body">
-            <% if session[:success] %>
-                <div class="alert alert-success alert-dismissible fade show" role="alert">
-                    <strong><%= session[:success] %></strong>
-                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-                </div>
-                <% session[:success] = nil %>
-            <% end %>
             <form action="/edit_user/<%= @user['user_id']%>" method="POST" enctype="multipart/form-data" >
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
@@ -77,7 +70,7 @@
                     <% if @user['photo'] %>
                         <img class="img-thumbnail mb-2" src="/uploads/users/<%= @user['photo'] %>" alt="<%= @user['name'] %>" style="max-width: 200px">
                     <% end %>
-                    <input type="file" class="form-control" id="photo" name="photo">
+                    <input type="file" class="form-control  mt-2" id="photo" name="photo">
                     <% if @errors.any? { |e| e.include?('Photo') } %>
                         <div class="form-text text-danger">
                             <%= @errors.find { |e| e.include?('Photo')}%>
