--- a/views/layouts/user/template.erb
+++ b/views/layouts/user/template.erb
@@ -39,10 +39,10 @@
           <!-- Right-aligned nav items (Login & Register) -->
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link text-white" href="/login">Login</a>
+              <a class="nav-link text-white" href="#">My Wishlists</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="/register">Register</a>
+              <a class="nav-link text-white" href="#">Open Store</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="/logout">Log Out</a>
