--- a/views/layouts/seller/seller_panel/navbar.erb
+++ b/views/layouts/seller/seller_panel/navbar.erb
@@ -16,7 +16,7 @@
             <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
             <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="/admin_view_profile/<%= current_user['user_id'] %>">Settings</a></li>
-                <li><a class="dropdown-item" href="">Activity Log</a></li>
+                <li><a class="dropdown-item" href="/seller_dashboard">Seller Dashboard</a></li>
                 <li><hr class="dropdown-divider" /></li>
                 <li><button class="dropdown-item" data-bs-toggle="modal" data-bs-target="#Logout">Logout</button></li>
             </ul>
