--- a/views/layouts/seller/template.erb
+++ b/views/layouts/seller/template.erb
@@ -39,7 +39,7 @@
           <!-- Right-aligned nav items (Login & Register) -->
           <ul class="navbar-nav mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">My Store</a>
+              <a class="nav-link text-white" href="/seller_dashboard">My Store</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="/logout">Log Out</a>
