update seller_panel pages

--- a/views/layouts/seller/seller_panel/layout.erb
+++ b/views/layouts/seller/seller_panel/layout.erb
@@ -1,10 +1,10 @@
-<%= erb :"layouts/admin/header" %>
-<%= erb :"layouts/admin/navbar" %>
-<%= erb :"layouts/admin/sidebar" %>
+<%= erb :"layouts/seller/seller_panel/header" %>
+<%= erb :"layouts/seller/seller_panel/navbar" %>
+<%= erb :"layouts/seller/seller_panel/sidebar" %>
 
 <div id="layoutSidenav_content">
     <main>
         <%= yield %>
     </main>
-    <%= erb :"layouts/admin/footer" %>
+    <%= erb :"layouts/seller/seller_panel/footer" %>
 </div>
