update index seller & seller_panel pages

--- a/views/seller/index.erb
+++ b/views/seller/index.erb
@@ -1,1 +1,7 @@
-<h1>Seller Account</h1>
+<h1 class="text-uppercase my-5 mx-5"><%= current_user['name'] %></h1>
+
+<p class="mx-3">William Tanuwijaya</p>
+
+<p class="mb-5">Xabi Alonso</p>
+
+<p>Nadiem Makarim</p>
