--- a/views/sign/login.erb
+++ b/views/sign/login.erb
@@ -24,14 +24,12 @@
             <% end %>
 
             <form action="/login" method="post">
-                <% remembered_email = request.cookies['remember_email'] %>
-                <% remembered_password = request.cookies['remember_password'] %>
                 <div class="input-group mb-3">
                     <span class="input-group-text">
                         <i class="fa-solid fa-envelope"></i>
                     </span>
                     <div class="form-floating position-relative">
-                        <input class="form-control" id="login_email" name="email" type="email" placeholder="Input Your Email" value="<%= params[:email] || remembered_email %>" />
+                        <input class="form-control" id="login_email" name="email" type="email" placeholder="Input Your Email" value="<%= params[:email] %>" />
                         <label for="email">Email address</label>
                     </div>
                 </div>
@@ -40,14 +38,9 @@
                         <i class="fa-solid fa-eye-slash passwordeyes"></i>
                     </span>
                     <div class="form-floating position-relative">
-                        <input class="form-control" id="password" name="password" type="password" placeholder="Input Your Password" value="<%= params[:password] || remembered_password %>" />
+                        <input class="form-control" id="password" name="password" type="password" placeholder="Input Your Password" value="<%= params[:password]%>" />
                         <label for="password">Password</label>
                     </div>
-                </div>
-                <div class="form-check mb-3">
-                    <% remember_checked = remembered_email ? 'checked' : '' %>
-                    <input class="form-check-input" id="remember" name="remember" type="checkbox" <%= remember_checked %> />
-                    <label class="form-check-label" for="remember">Remember Me</label>
                 </div>
                 <div class="d-flex align-items-center justify-content-between mt-4 mb-0">
                     <a class="small" href="/forgot_password">Forgot Password?</a>
