update seller_register page & function

--- a/views/layouts/user/template.erb
+++ b/views/layouts/user/template.erb
@@ -42,7 +42,7 @@
               <a class="nav-link text-white" href="#">My Wishlists</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link text-white" href="#">Open Store</a>
+              <a class="nav-link text-white" href="/seller_register">Open Store</a>
             </li>
             <li class="nav-item">
               <a class="nav-link text-white" href="/logout">Log Out</a>
