--- a/views/admin/view_profile.erb
+++ b/views/admin/view_profile.erb
@@ -34,6 +34,12 @@
                 </div>
             </div>
             <div class="mb-3 row">
+                <label for="age" class="col-sm-2 col-form-label">Age</label>
+                <div class="col-sm-10">
+                    <input type="text" readonly class="form-control-plaintext" id="age" value="<%= @profile['age'] %>">
+                </div>
+            </div>
+            <div class="mb-3 row">
                 <label for="address" class="col-sm-2 col-form-label">Address</label>
                 <div class="col-sm-10">
                     <input type="text" readonly class="form-control-plaintext" id="address" value="<%= @profile['address'] %>">
