--- a/views/admin/view_profile.erb
+++ b/views/admin/view_profile.erb
@@ -9,6 +9,13 @@
             View <%= @profile['name']%>
         </div>
         <div class="card-body">
+            <% if session[:success] %>
+                <div class="alert alert-success alert-dismissible fade show" role="alert">
+                    <%= session[:success] %>
+                    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                <% session[:success] = nil %>
+            <% end %>
             <div class="mb-3 row">
                 <label for="name" class="col-sm-2 col-form-label">Name</label>
                 <div class="col-sm-10">
