--- a/views/layouts/seller/template.erb
+++ b/views/layouts/seller/template.erb
@@ -31,7 +31,7 @@
                 <li><a class="dropdown-item" href="#">Admin</a></li>
                 <li><a class="dropdown-item" href="#">User</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Seller</a></li>
+                <li><a class="dropdown-item" href="/seller_profile">Seller</a></li>
               </ul>
             </li>
           </ul>
