--- a/views/layouts/user/template.erb
+++ b/views/layouts/user/template.erb
@@ -28,10 +28,7 @@
                 Grade
               </a>
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Admin</a></li>
-                <li><a class="dropdown-item" href="#">User</a></li>
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Seller</a></li>
+                <li><a class="dropdown-item" href="/user_profile">User</a></li>
               </ul>
             </li>
           </ul>
