--- a/views/user/profile/view.erb
+++ b/views/user/profile/view.erb
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col">
             <div class="card border-secondary">
-                <div class="card-header">User Profile</div>
+                <div class="card-header">User Profile View</div>
                 <div class="card-body">
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">
@@ -31,6 +31,14 @@
                         </li>
                         <li class="list-group-item">
                             <div class="mb-3 row">
+                                <label for="phone" class="col-sm-2 col-form-label">Phone</label>
+                                <div class="col-sm-10">
+                                    <input type="text" readonly class="form-control-plaintext" id="phone" value="<%= @profile['phone'] %>">
+                                </div>
+                            </div>
+                        </li>
+                        <li class="list-group-item">
+                            <div class="mb-3 row">
                                 <label for="birthdate" class="col-sm-2 col-form-label">Birthdate</label>
                                 <div class="col-sm-10">
                                     <input type="text" readonly class="form-control-plaintext" id="birthdate" value="<%= @profile['birthdate']%>">
@@ -46,6 +54,9 @@
                             </div>
                         </li>
                     </ul>
+                </div>
+                <div class="card-footer">
+                    <button class="btn btn-success float-end">Edit My Profile</button>
                 </div>
             </div>     
         </div>
