--- a/views/user/profile/edit.erb
+++ b/views/user/profile/edit.erb
@@ -56,8 +56,8 @@
                     </ul>
                 </div>
                 <div class="card-footer">
-                    <a class="btn btn-danger float-start">Back</a>
-                    <button class="btn btn-success float-end">Edit My Profile</button>
+                    <a href="#" class="btn btn-danger float-start">Back</a>
+                    <button class="btn btn-success float-end">Submit</button>
                 </div>
             </div>     
         </div>
