--- a/views/seller/profile/view.erb
+++ b/views/seller/profile/view.erb
@@ -66,7 +66,7 @@
                 </div>
             </div>
             <!-- Edit Button -->
-            <a class="btn btn-outline-success float-end" href="/user_profile_edit/<% current_user['user_id'] %>">Edit My Profile</a>
+            <a href="/editan" class="btn btn-outline-success float-end">Edit My Profile</a>
         </div>
     </div>
 </div>
