--- a/views/user/profile/view.erb
+++ b/views/user/profile/view.erb
@@ -56,7 +56,7 @@
                     </ul>
                 </div>
                 <div class="card-footer">
-                    <button class="btn btn-success float-end">Edit My Profile</button>
+                    <a href="#" class="btn btn-success float-end">Edit My Profile</a>
                 </div>
             </div>     
         </div>
