--- a/views/seller/index.erb
+++ b/views/seller/index.erb
@@ -1,3 +1,11 @@
+<% if session[:success] %>
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong><%= session[:success] %></strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    <% session[:success] = nil %>
+<% end %>
+
 <h1 class="text-uppercase my-5 mx-5"><%= current_user['name'] %></h1>
 
 <p class="mx-3">William Tanuwijaya</p>
