--- a/views/user/index.erb
+++ b/views/user/index.erb
@@ -1,1 +1,9 @@
+<% if session[:success] %>
+    <div class="alert alert-success alert-dismissible fade show" role="alert">
+        <strong><%= session[:success] %></strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+    </div>
+    <% session[:success] = nil %>
+<% end %>
+
 <h1>Hello <%= current_user['name'] %></h1>
